Add osseous theme

--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ contentDir             = "content"
 languageCode           = "en-us"
 layoutDir              = "layouts"
 publishDir             = "public"
-theme                  = "pixyll"
+theme                  = "osseous"
 themesDir              = "themes"
 title                  = "RamblingWare"
 enableEmoji            = true
