Fix head and metadata

--- a/config.yaml
+++ b/config.yaml
@@ -28,5 +28,9 @@ taxonomies:
   tag: tags
 
 params:
+  description: "This is my blog about computers, programming, tech, and things that bother me. I hope it bothers you too."
+  keywords: "blog,tech,ramblingware,software,cloud,webdev,java,scala,html,css,javascript,code,programming,privacy,open,source"
+  thumbnail: "https://amdelamar.com/img/social/social-media-thumbnail.png"
+  author: "amdelamar"
   twitter_username: "amdelamar"
   paginate: 6
