--- a/config.yaml
+++ b/config.yaml
@@ -23,6 +23,9 @@ taxonomies:
   category: category
   tag: tags
 
+permalinks:
+  post: "/:slug"
+
 params:
   description: "This is my blog about computers, programming, tech, and things that bother me. I hope it bothers you too."
   keywords: "blog,tech,ramblingware,software,cloud,webdev,java,scala,html,css,javascript,code,programming,privacy,open,source"
