--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-title: "RamblingWare"
+title: "Austin Delamar"
 author: "amdelamar"
 baseUrl: "https://amdelamar.com/blog"
 archetypeDir: "archetypes"
